# mtfind

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  alg.cpp  alg.h  parser.cpp  parser.h  queue.h  textprocessor.cpp  textprocessor.h
src/test/: CMakeLists.txt  test.cpp
